# pola-js

./: .gitignore  .gitmodules  README.md  souffle-tuning-log.md
bash/: env.sh  gen-node-facts.sh  install-demo-code.sh  ncpu.sh  scratch.sh  souffle-compile.sh  swc-compile.sh  tajs-compile.sh  test-js.sh
dl/: README.md  authority.dl  gen-builtin-module-facts.js  node-require-source-target.dl  variables.dl
dl/facts/nodejs-v14.13.0/: coreNodeModule.facts
dl/include/: README.md
dl/include/core/: README.md  core.dl  errors.dl  scoping.dl
dl/include/flow-based-scoping/: README.md  errors.dl  flow-based-scoping.dl
dl/include/flow-sensitive-points-to/: README.md  authority.dl  flow-sensitive-points-to.dl  points-to.dl  transfer-functions.dl  types.dl
dl/include/node-require/: README.md  errors.dl  flow-sensitive-points-to.dl  node-require.dl
dl/include/test/core/: core.dl  scoping.dl
dl/include/test/flow-based-scoping/: flow-based-scoping.dl
dl/include/test/flow-sensitive-points-to/: global-access.dl  out-may-point-to.dl  parameter-access.dl
dl/include/test/node-require/: node-require.dl
dl/test/js/flow-sensitive-points-to/: global-invoke-read.dl  global-invoke.dl  global-invoke.js  global-property-read.dl  global-read.dl  global-write.dl  global-write.js  linked-list.dl  linked-list.js  method-invoke.dl  method-invoke.js  parameter-invoke.dl  parameter-invoke.js  property-read.dl  property-read.js  property-write.dl  (+11 more)
rust/: Cargo.toml
rust/src/: analyze.rs  heap.rs  lib.rs  main.rs  parse.rs  scope.rs
rust/testdata/: sandbox.js  sandbox.ts
(+16 files in other folders)
