[package]
name = "pola-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
num-bigint = "0.4.3"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
swc_atoms = "0.4.38"
swc_common = { version = "0.29.33", features = ["tty-emitter"] }
swc_ecma_ast = "0.98.0"
swc_ecma_parser = "0.127.0"
swc_ecma_transforms_base = "0.119.0"
swc_ecma_visit = "0.84.0"
thiserror = "1.0.38"
tracing = "0.1.37"
